# AutoPapers

./: .env.example  .gitignore  README.md  pyproject.toml  run_web_myrag.ps1  start_autopapers_myrag.bat
autopapers/: __init__.py
docs/plans/: 2026-04-07-autopapers-design.md  2026-04-07-web-ui-design.md
scripts/: reanalyze_library.py
src/autopapers/: __init__.py  __main__.py  arxiv.py  cli.py  config.py  http_client.py  json_utils.py  library.py  models.py  openreview.py  openreview_auth.py  pdf.py  retrieval.py  scholar.py  taxonomy.py  utils.py  workflows.py
src/autopapers/common/: __init__.py  atomic_io.py  paper_identity.py  reference_parsing.py  text_normalization.py
src/autopapers/llm/: __init__.py  context_builder.py  digest_pipeline.py  fallbacks.py  minimax.py  planner.py  prompt_specs.py  request_planning.py  response_formats.py
src/autopapers/pipeline/: __init__.py  candidate_collection.py  metadata_enrichment.py  paper_processing.py  progress.py  reporting.py
src/autopapers/storage/: __init__.py  index_store.py  queries.py  rendering.py  writer.py
src/autopapers/web/: __init__.py  app.py  http.py  jobs.py  server.py  test_workers.py
src/autopapers/web/static/: app.css  app.js  index.html
src/autopapers/web/tasks/: __init__.py  ipc.py  manager.py  models.py  (+1 more)
tests/: test_arxiv.py  test_config.py  test_http_client.py  test_jobs.py  test_json_utils.py  test_library.py  test_minimax.py  test_openreview.py  test_openreview_auth.py  test_pdf.py  test_planner.py  test_retrieval.py  test_scholar.py  test_taxonomy.py  test_web.py  test_workflows.py
(+9 files in other folders)
