[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autopapers"
version = "0.1.0"
description = "A modular research-paper harness for arXiv discovery, summarization, and local paper reuse."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=5.1.0"]

[project.scripts]
autopapers = "autopapers.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"autopapers.web" = ["static/*.html", "static/*.css", "static/*.js"]
